<resources>
    <string name="app_nameappcommon" translatable="false">公共类</string>
    <string name="appmy1" translatable="false">设置</string>
    <string name="appmy2" translatable="false">安全中心</string>
    <string name="appmy3" translatable="false">字体大小</string>
    <string name="appmy4" translatable="false">语言切换</string>
    <string name="appmy5" translatable="false">清除缓存</string>
    <string name="appmy6" translatable="false">关于</string>
    <string name="appmy7" translatable="false">新消息通知</string>
    <string name="appmy8" translatable="false">退出</string>
    <string name="appmy9" translatable="false">版本号</string>
    <string name="appmy10" translatable="false">客服电话</string>
    <string name="appmy11" translatable="false">功能简介</string>
    <string name="appmy12" translatable="false">用户协议</string>
    <string name="appmy13" translatable="false">隐私政策</string>
    <string name="appmy14" translatable="false">安全中心</string>
    <string name="appmy15" translatable="false">修改密码</string>
    <string name="appmy16" translatable="false">手机号码变更</string>
    <string name="appmy17" translatable="false">座机变更</string>
    <string name="appmy18" translatable="false">邮箱变更</string>
    <string name="appmy19" translatable="false">未设置</string>
    <string name="appmy20" translatable="false">我的二维码</string>
    <string name="appmy21" translatable="false">请填写...</string>
    <string name="appmy22" translatable="false">指纹登录</string>
    <string name="appmy23" translatable="false">头像</string>
    <string name="appmy24" translatable="false">姓名</string>
    <string name="appmy25" translatable="false">手机号</string>
    <string name="appmy26" translatable="false">性别</string>
    <string name="appmy27" translatable="false">个人签名</string>
    <string name="appmy28" translatable="false">所属组织</string>
    <string name="appmy29" translatable="false">职位</string>
    <string name="appmy30" translatable="false">个人资料</string>

    <string name="applogin1" translatable="false">提示</string>
    <string name="applogin2" translatable="false">是否退出登录?</string>
    <string name="applogin3" translatable="false">取消</string>
    <string name="applogin4" translatable="false">确定</string>
    <string name="applogin5" translatable="false">欢迎使用</string>
    <string name="applogin6" translatable="false">登录即代表同意</string>
    <string name="applogin7" translatable="false">用户协议</string>
    <string name="applogin8" translatable="false">及</string>
    <string name="applogin9" translatable="false">隐私政策</string>
    <string name="applogin10" translatable="false">请输入手机号</string>
    <string name="applogin11" translatable="false">请输入密码</string>
    <string name="applogin12" translatable="false">登录</string>
    <string name="applogin13" translatable="false">忘记密码？</string>
    <string name="applogin14" translatable="false">立即注册</string>
    <string name="applogin15" translatable="false">绑定手机号</string>
    <string name="applogin16" translatable="false">为了您的帐号更加安全，请先绑定手机</string>
    <string name="applogin17" translatable="false">手机号</string>
    <string name="applogin18" translatable="false">验证码</string>
    <string name="applogin19" translatable="false">请输入验证码</string>
    <string name="applogin20" translatable="false">获取验证码</string>
    <string name="applogin21" translatable="false">忘记密码</string>
    <string name="applogin22" translatable="false">请输入新密码</string>
    <string name="applogin23" translatable="false">请再次输入新密码</string>
    <string name="applogin24" translatable="false">登录密码必须包含大小写字母、数字，8-18位</string>
    <string name="applogin25" translatable="false">请再次输入新密码</string>
    <string name="applogin26" translatable="false">重置密码</string>
    <string name="applogin27" translatable="false">注册</string>
    <string name="applogin28" translatable="false">两次密码不一致请重新输入</string>
    <string name="applogin29" translatable="false">请勾选用户须知及隐私权政策</string>
    <string name="applogin30" translatable="false">点击登录</string>
    <string name="applogin31" translatable="false">请输入姓名</string>
    <string name="applogin32" translatable="false">请输入身份证</string>
    <string name="applogin33" translatable="false">密码格式不正确</string>
    <string name="applogin34" translatable="false">手机号格式不正确</string>
    <string name="applogin35" translatable="false">身份证格式不正确</string>

    <string name="appindex1" translatable="false">我的收藏</string>
    <string name="appindex2" translatable="false">企业/组织</string>
    <string name="appindex3" translatable="false">我的消息</string>
    <string name="appindex4" translatable="false">设置</string>
    <string name="appindex5" translatable="false">无签名，请填写…</string>
    <string name="appindex6" translatable="false">搜索</string>
    <string name="appindex7" translatable="false">资讯</string>
    <string name="appindex8" translatable="false">数字乡村</string>


    <string name="appcommon1" translatable="false">工作台</string>


    <string name="str_pip1" translatable="false">画中画</string>
    <string name="appsplash_djs" translatable="false">跳过(%s)</string>
    <string name="str_start_pip" translatable="false">悬浮窗</string>
    <string name="tips1more1" translatable="false">1测试测试测试测试测试测试测试测试测试1测测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</string>
    <string name="tips1more2" translatable="false">2测试测试测试测试测试测试测试测试测试2测测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试</string>

</resources>


