<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_dialog"
        android:layout_width="294mm"
        android:layout_height="wrap_content"
        android:background="@drawable/background_wihte"
        android:orientation="vertical">
        <!--        android:background="@drawable/slb_popup2"-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">


            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20mm"
                android:layout_marginBottom="20mm"
                android:text="@string/applogin1"
                android:textColor="@color/color333333"
                android:textSize="16mm"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tv_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/applogin2"
                        android:textColor="@color/color666666"
                        android:textSize="14mm" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1mm"
                    android:layout_marginTop="20mm"
                    android:background="@color/grayFAFAFA" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50mm"
                    android:layout_marginTop="0mm"
                    android:layout_marginBottom="0mm"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/ll_cancel"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/applogin3"
                            android:textColor="@color/color_666666"
                            android:textSize="17mm" />
                    </LinearLayout>

                    <View
                        android:layout_width="1mm"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10mm"
                        android:background="@color/grayFAFAFA" />

                    <LinearLayout
                        android:id="@+id/ll_ok"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/applogin4"
                            android:textColor="#DB0916"
                            android:textSize="17mm" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>